--- a/main.css
+++ b/main.css
@@ -32,15 +32,22 @@ html{
 
 
 #statistics{
-	margin-top: 3em;
+	margin-top: 1em;
 	margin-left: 3em;
 }
+
 
 #statistics th, #statistics td{
 	text-align: right;
 	padding: 0.5em 0.2em;
 	border-bottom: 1px solid #aaaaaa;
 }
+
+#statistics th{
+	font-weight: unset;
+	padding-right: 1em;
+}
+
 
 #statistics span{
 	padding: 0.1em 0.2em;
@@ -52,7 +59,7 @@ html{
 
 #statistics .synonyms{
 	text-align: left;
-	color: #555555;
+	opacity: 0.7;
 }
 
 /* Actual Positives */
