Add some section headers to stats table

--- a/main.css
+++ b/main.css
@@ -79,6 +79,11 @@ html{
 	padding-right: 1em;
 }
 
+#statistics th.section_header{
+	font-weight: bold;
+	text-align: left;
+}
+
 
 #statistics span{
 	padding: 0.05em 0.3em;
