--- a/main.css
+++ b/main.css
@@ -93,6 +93,11 @@ html{
 	text-align: center;
 }
 
+#statistics .smaller_formula{
+	font-size: 0.9em;
+	letter-spacing: -0.08em;
+}
+
 #statistics .synonyms{
 	text-align: left;
 	opacity: 0.7;
